added detailed log output